--- a/Spark/spark.Task02/build.gradle
+++ b/Spark/spark.Task02/build.gradle
@@ -22,6 +22,16 @@ task fatJar(type: Jar) {
     zip64 true
 }
 
+
+task azJob(){
+    doLast{
+        new File("src/main/resources/az.job").text = "type=command\n" +
+                "command=echo \"Hello World\""
+    }
+}
+
+
+
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
@@ -47,3 +57,4 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
