--- a/Spark/spark.Task02/build.gradle
+++ b/Spark/spark.Task02/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     compile 'org.apache.spark:spark-streaming_2.11:2.1.0'
     compile 'org.apache.spark:spark-core_2.11:2.1.0'
 
+    testCompile 'org.scalatest:scalatest_2.11:3.0.5'
+    testRuntime 'org.pegdown:pegdown:1.4.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
